--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -12,6 +12,7 @@ world-191713394 {
 
 
 world-627054864 {
+    # 在打开的 GUI 一侧显示书签列表。
     B:bookmarkOverlayEnabled=false
 
     # 给予物品而非显示其配方。
@@ -19,7 +20,7 @@ world-627054864 {
 
     # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
-    S:filterText=psif
+    S:filterText=liebian
 
     # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
