--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -127,7 +127,7 @@ fission {
     # 修改裂变反应器产生的热量。
     D:fission_heat_generation=1.0
 
-    # 每tick移除的基础热量。顺序：水，红石，石英，金，萤石，青金石，钻石，液氦，末影，凛冰，铁，绿宝石，铜，锡，镁。
+    # 每tick移除的基础热量。顺序：水，红石，石英，金，荧石，青金石，钻石，液氦，末影，凛冰，铁，绿宝石，铜，锡，镁。
     D:fission_cooling_rate <
         60.0
         90.0
