--- a/config/smoothfont/smoothfont.cfg
+++ b/config/smoothfont/smoothfont.cfg
@@ -161,7 +161,7 @@ font {
     I:fontTargetToReplace=0
 
     # Internal state.
-    B:fontDetailList=false
+    B:fontDetailList=true
 
     # Margin around the glyph image.
     I:glyphImageMargin=1
